# hello-django-tutorial

./: pyproject.toml
app/config/: settings.py  urls.py
app/polls/: models.py  urls.py  views.py
app/polls/migrations/: 0001_initial.py
app/polls/templates/polls/: results.html
