[tool.poetry]
name = "hello-django"
version = "0.1.0"
description = ""
authors = ["ricepotato <sukjun40@naver.com>"]
readme = "README.md"
packages = [{include = "hello_django"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
django-bootstrap-v5 = "^1.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
